--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
-name = "million_backend"
+name = "proto"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sea-orm = "0.12.15"
+prost = "0.12.4"
 tonic = "0.11.0"
-proto = { path = "../proto" }
+
+[build-dependencies]
+tonic-build = "0.11"
