--- a/million_backend/Cargo.toml
+++ b/million_backend/Cargo.toml
@@ -12,4 +12,5 @@ proto = { path = "../proto" }
 anyhow = { version = "1.0.82", features = ["backtrace"] }
 tokio = { version = "1.37.0", features = ["full"] }
 tokio-stream = { version = "0.1.15", features = ["full"] }
-amiquip = "0.4.2"
+amqprs = "1.6.0"
+h2 = "0.4.4"
