--- a/million_backend/Cargo.toml
+++ b/million_backend/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
+sea-orm = { version = "0.12.15", features = [
+    "sqlx-postgres",
+    "runtime-tokio-native-tls",
+] }
 tonic = "0.11.0"
 proto = { path = "../proto" }
 anyhow = { version = "1.0.82", features = ["backtrace"] }
@@ -14,3 +17,4 @@ tokio = { version = "1.37.0", features = ["full"] }
 tokio-stream = { version = "0.1.15", features = ["full"] }
 dotenvy = "0.15.7"
 
+entity = { path = "entity" }
