--- a/million_crawler/Cargo.toml
+++ b/million_crawler/Cargo.toml
@@ -14,3 +14,4 @@ anyhow = { version = "1.0.82", features = ["backtrace"] }
 url = "2.5.0"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+backoff = { version = "0.4.0", features = ["tokio"] }
