--- a/million_backend/Cargo.toml
+++ b/million_backend/Cargo.toml
@@ -19,3 +19,5 @@ entity = { path = "entity" }
 migration = { path = "migration" }
 chrono = "0.4.38"
 url = "2.5.0"
+image = "0.25.1"
+rust-s3 = "0.33.0"
