--- a/million_backend/Cargo.toml
+++ b/million_backend/Cargo.toml
@@ -21,3 +21,5 @@ chrono = "0.4.38"
 url = "2.5.0"
 image = "0.25.1"
 rust-s3 = "0.33.0"
+meilisearch-sdk = "0.25.0"
+serde = { version = "1.0.200", features = ["derive"] }
