other to database

--- a/compose.yaml
+++ b/compose.yaml
@@ -13,9 +13,9 @@ services:
       watch:
         - action: rebuild
           path: ./million_backend
-    environment:
-      - AWS_ACCESS_KEY_ID=uNnan5X6oygl4NpvZBMf
-      - AWS_SECRET_ACCESS_KEY=ex2UYLzQVpy7qddss0ebQ2jNQYD5BpHI101hPF5t
+    # environment:
+    #   - AWS_ACCESS_KEY_ID=uNnan5X6oygl4NpvZBMf
+    #   - AWS_SECRET_ACCESS_KEY=ex2UYLzQVpy7qddss0ebQ2jNQYD5BpHI101hPF5t
 
   database:
     image: 'postgres:latest'
@@ -28,17 +28,17 @@ services:
     volumes:
       - 'database_data:/var/lib/pgsql/data'
 
-  object_store:
-    image: 'bitnami/minio:latest'
-    ports:
-      - '9000:9000'
-      - '9001:9001'
-    environment:
-      - MINIO_ROOT_USER=million_search
-      - MINIO_ROOT_PASSWORD=password1234
-      - MINIO_DEFAULT_BUCKETS=million-search
-    volumes:
-      - 'object_store_data:/data'
+  # object_store:
+  #   image: 'bitnami/minio:latest'
+  #   ports:
+  #     - '9000:9000'
+  #     - '9001:9001'
+  #   environment:
+  #     - MINIO_ROOT_USER=million_search
+  #     - MINIO_ROOT_PASSWORD=password1234
+  #     - MINIO_DEFAULT_BUCKETS=million-search
+  #   volumes:
+  #     - 'object_store_data:/data'
 
   search:
     image: 'getmeili/meilisearch:latest'
@@ -50,8 +50,8 @@ services:
       - '7700:7700'
 
 volumes:
-  object_store_data:
-    driver: local
+  # object_store_data:
+  #   driver: local
   database_data:
     driver: local
   search_data:
