--- a/million_crawler/Cargo.toml
+++ b/million_crawler/Cargo.toml
@@ -15,3 +15,5 @@ url = "2.5.0"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 exponential-backoff = "1.2.0"
+clap = { version = "4.5.4", features = ["derive", "env"] }
+lazy_static = "1.4.0"
