--- a/million_client/package.json
+++ b/million_client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "postcss main.css --dir public"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +12,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "postcss-loader": "^8.1.1",
+    "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.3"
   }
 }
