--- a/compose.yaml
+++ b/compose.yaml
@@ -21,7 +21,7 @@ services:
           path: ./million_client
   database:
     image: 'postgres:latest'
-    restart: always
+    # restart: always
     environment:
       - POSTGRES_USER=million_search
       - POSTGRES_PASSWORD=password1234
