--- a/million_client/Cargo.toml
+++ b/million_client/Cargo.toml
@@ -17,3 +17,5 @@ proto = { path = "../proto" }
 anyhow = { version = "1.0.82", features = ["backtrace"] }
 serde = { version = "1.0.200", features = ["derive"] }
 tower-http = { version = "0.5.2", features = ["fs", "trace"] }
+tower-livereload = "0.9.2"
+serde_url_params = "0.2.1"
