--- a/million_backend/Cargo.toml
+++ b/million_backend/Cargo.toml
@@ -6,10 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sea-orm = { version = "0.12.15", features = [
-    "sqlx-postgres",
-    "runtime-tokio-native-tls",
-] }
+sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "sea-orm-internal"] }
 proto = { path = "../proto" }
 anyhow = { version = "1.0.82", features = ["backtrace"] }
 tokio = { version = "1.37.0", features = ["full"] }
