--- a/million_backend/migration/Cargo.toml
+++ b/million_backend/migration/Cargo.toml
@@ -18,6 +18,6 @@ features = [
   # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
   # e.g.
   # "runtime-async-std-rustls",
-  "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
-  "sqlx-postgres",        # `DATABASE_DRIVER` feature
+  # "runtime-tokio-rustls", # `ASYNC_RUNTIME` feature
+  # "sqlx-postgres",        # `DATABASE_DRIVER` feature
 ]
