--- a/compose.yaml
+++ b/compose.yaml
@@ -35,7 +35,7 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - 'database_data:/var/lib/pgsql/data'
+      - 'database_data:/var/lib/postgresql/data'
   meilisearch:
     image: 'getmeili/meilisearch:latest'
     environment:
