--- a/million_client/Cargo.toml
+++ b/million_client/Cargo.toml
@@ -19,3 +19,4 @@ serde = { version = "1.0.200", features = ["derive"] }
 tower-http = { version = "0.5.2", features = ["fs", "trace"] }
 tower-livereload = "0.9.2"
 serde_url_params = "0.2.1"
+serde_json = "1.0.116"
