--- a/million_crawler/Cargo.toml
+++ b/million_crawler/Cargo.toml
@@ -17,3 +17,5 @@ tracing-subscriber = "0.3.18"
 exponential-backoff = "1.2.0"
 clap = { version = "4.5.4", features = ["derive", "env"] }
 lazy_static = "1.4.0"
+serde = { version = "1.0.201", features = ["derive"] }
+serde_json = "1.0.117"
