--- a/million_backend/Cargo.toml
+++ b/million_backend/Cargo.toml
@@ -20,3 +20,4 @@ meilisearch-sdk = "0.25.0"
 serde = { version = "1.0.200", features = ["derive"] }
 futures = "0.3.30"
 serde_json = "1.0.116"
+sea-query = "0.30.7"
