--- a/million_client/Cargo.toml
+++ b/million_client/Cargo.toml
@@ -20,3 +20,4 @@ tower-http = { version = "0.5.2", features = ["fs", "trace"] }
 tower-livereload = "0.9.2"
 serde_url_params = "0.2.1"
 serde_json = "1.0.116"
+futures = "0.3.30"
