--- a/million_crawler/Cargo.toml
+++ b/million_crawler/Cargo.toml
@@ -19,3 +19,5 @@ clap = { version = "4.5.4", features = ["derive", "env"] }
 lazy_static = "1.4.0"
 serde = { version = "1.0.201", features = ["derive"] }
 serde_json = "1.0.117"
+futures = "0.3.30"
+image = "0.25.1"
