--- a/million_crawler/Cargo.toml
+++ b/million_crawler/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 reqwest = "0.12.4"
-scraper = "0.19.0"
+scraper = { version = "0.19.0", features = ["atomic"] }
 tokio = { version = "1.37.0", features = ["full"] }
 proto = { path = "../proto" }
 anyhow = { version = "1.0.82", features = ["backtrace"] }
