--- a/million_client/Cargo.toml
+++ b/million_client/Cargo.toml
@@ -21,3 +21,4 @@ tower-livereload = "0.9.2"
 serde_url_params = "0.2.1"
 serde_json = "1.0.116"
 futures = "0.3.30"
+serde_qs = { version = "0.13.0", features = ["axum"] }
