--- a/million_crawler/Cargo.toml
+++ b/million_crawler/Cargo.toml
@@ -21,3 +21,4 @@ serde = { version = "1.0.201", features = ["derive"] }
 serde_json = "1.0.117"
 futures = "0.3.30"
 image = "0.25.1"
+svg = "0.17.0"
