--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 prost = "0.12.4"
 prost-types = "0.12.4"
-tonic = "0.11.0"
+tonic = { version = "0.11.0", features = ["tls", "zstd"] }
 
 [build-dependencies]
 tonic-build = "0.11"
